--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -16,4 +16,5 @@
           </tr>
         <% end %>
     </table>
+    <%= link_to 'お気に入りした一覧', favorites_path %>
     <%= link_to '作成画面へ', new_picture_path %>
