--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,6 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+html {
+  min-height: 100%
+}
+body {
+  background: linear-gradient(-160deg, #4C64D3, #CF2E92, #F26939, #FFDD83);
+}
