--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,6 +1,12 @@
 html {
   min-height: 100%
 }
+
 body {
   background: linear-gradient(-160deg, #4C64D3, #CF2E92, #F26939, #FFDD83);
+}
+
+header {
+  background-color: #800080;
+  height: 80px;
 }
