--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,18 +8,23 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-    <% flash.each do |key,value|%>
-      <%= content_tag(:div,value,class: "#{key}")%>
-    <% end %>
-    <% if logged_in? %>
-      <%= link_to "Profile", user_path(current_user.id) %>
-      <%= link_to "Logout", session_path(current_user.id),method: :delete %>
-    <% else %>
-      <%= link_to "Sign up", new_user_path %>
-      <%= link_to "Login", new_session_path %>
-    <% end %>
+    <header>
+      <% flash.each do |key,value|%>
+        <%= content_tag(:div,value,class: "#{key}")%>
+      <% end %>
+        <% if logged_in? %>
+        <span class= "label label-default">
+          <%= link_to "Profile", user_path(current_user.id) %>
+          <%= link_to "Logout", session_path(current_user.id),method: :delete %>
+        </span>
+        <% else %>
+        <span class= "label label-default2">
+          <%= link_to "Sign up", new_user_path %>
+          <%= link_to "Login", new_session_path %>
+        </span>
+      <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
