--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <%= link_to "Logout", session_path(current_user.id),method: :delete %>
         </span>
         <% else %>
-        <span class= "label label-default2">
+        <span class= "label label-default">
           <%= link_to "Sign up", new_user_path %>
           <%= link_to "Login", new_session_path %>
         </span>
