--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -7,6 +7,12 @@
     <%= form.label :content %>
     <%= form.text_field :content%>
   </div>
+  <div class="field">
+    <%= form.label :image %>
+    <%= image_tag(@picture.image.url) if @picture.image && @picture.image.url %>
+    <%= form.file_field :image %>
+    <%= form.hidden_field :image_cache %>
+  </div>
   <%= form.submit %>
 <% end %>
 <%= link_to '一覧画面へ', pictures_path %>
