--- a/app/views/pictures/confirm.html.erb
+++ b/app/views/pictures/confirm.html.erb
@@ -2,6 +2,8 @@
 <%= form_with(model: @picture , local: true ) do |form| %>
   <%= form.hidden_field :title %>
   <%= form.hidden_field :content %>
+  <%= image_tag(@picture.image.url) if @picture.image && @picture.image.url %>
+  <%= form.hidden_field :image_cache %>
   <p>タイトル：<%= @picture.title %></p>
   <p>本文：<%= @picture.content %></p>
   <%= form.submit "登録する" %>
