--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -4,12 +4,14 @@
       <th>タイトル</th>
       <th>内容</th>
       <th>投稿者</th>
+      <th>投稿画像</th>
       </tr>
         <% @picture.each do |picture| %>
           <tr>
             <td><%= picture.title %></td>
             <td><%= picture.content %></td>
             <td><%= picture.user.name %></td>
+            <td><%= image_tag picture.image.url, width:'20%' %></td>
             <td><%= link_to '詳細情報へ', picture_path(picture.id) %></td>
             <td><%= link_to '編集情報へ', edit_picture_path(picture.id) %></td>
             <td><%= link_to '削除する', picture_path(picture.id), method: :delete %></td>
